--- a/index.html
+++ b/index.html
@@ -5,22 +5,32 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-------------title --------------->
     <title>Influencer-Gears</title>
+    <!------------fontawesome ------------------>
     <script src="https://kit.fontawesome.com/a74175177c.js" crossorigin="anonymous"></script>
+    <!-------------- style---------------->
     <link rel="stylesheet" href="css/style.css">
 </head>
+<!--------------------body-start---------------------------->
 
 <body>
+    <!----------------header-start--------------------->
     <header>
         <h2 class="header-icon">Influencer products</h2>
     </header>
+    <!----------------header-end --------------------->
+    <!--------------------main-start------------------------->
     <main>
+        <!-------------journey-section-start---------------->
         <section class="container">
             <div class="influencer-journey">
                 <div class="journey-details">
                     <h1 class="journey-title">Start your Journey as Influencer</h1>
+                    <!-------------animation-------------->
                     <h2 class="animation">Valuable Products</h2>
-                    <p>Welcome to the gears world.Here you can get high qulity products within reasonable price.We provide camera, ipods,drone etc.We respectn and value our customer's choice </p>
+                    <p>Welcome to the gears world.Here you can get high qulity products within reasonable price.We
+                        provide camera, ipods,drone etc.We respectn and value our customer's choice </p>
                     <a class="button" href="">Prebook now <i class="fas fa-arrow-right"></i></a>
                 </div>
                 <div class="journey-image">
@@ -28,6 +38,8 @@
                 </div>
             </div>
         </section>
+        <!-----------------------journey-section-end--------------------->
+        <!-------------------------photo-section-start-------------------->
         <section class="container">
             <div class="collection-box">
                 <h2 class="collection-title">Popular Collection</h2>
@@ -146,13 +158,14 @@
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star"></i>
                         <span class="rating">5.00</span>
-                        <p>Wordwide shifting<br> available<br>
-                            Buyers protection possible!</p>
+                        <p>Wordwide shifting<br> available<br>Buyers protection possible!</p>
                     </div>
                 </div>
             </div>
             <a class="link" href="">See More <i class="fas fa-arrow-right"></i></a>
         </section>
+        <!-------------------------photo-section-end----------------->
+        <!-------------------------contact-section-start------------->
         <section class="container">
             <div class="contact-form">
                 <form action="" class="form">
@@ -164,6 +177,8 @@
                 </form>
             </div>
         </section>
+        <!-------------------------contact-section-end------------->
+        <!------------------------footer-section-start-------------------------->
         <footer>
             <h3>Influencer products</h3>
             <p>Copyright &copy;2020 influencer products<br>All rights reserved
@@ -174,7 +189,10 @@
                 <i class="fas fa-globe"></i>
             </div>
         </footer>
+        <!---------------------------footer-section-end------------------------->
     </main>
+    <!--------------------------------------main-end----------------------------->
 </body>
+<!----------------------------------------body-end----------------------------->
 
 </html>
